# pytest pycodestyle configuration
[tool:pytest]
codestyle_max_line_length = 88
codestyle_ignore =
    *.py W504
    *.py E251
    *.py W503
    *.py E121
    *.py E126
    *.py E211
    *.py E225
    *.py E501
    *.py E203
    *.py E402
    *.py F401
    *.py F811
[metadata]
description-file = README.md
license_file = LICENSE
