# pytest pycodestyle configuration
[pycodestyle]
max-line-length = 88
ignore = W504,E251,W503,E121,E126,E211,E225,E501,E203,E402,F401,F811
[metadata]
description-file = README.md
license_file = LICENSE
[mypy]
ignore_missing_imports = True
show_error_codes = True
warn_redundant_casts = True
warn_unused_ignores = True
